# MikMarbleMod

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  build.bat  setup.bat
server/: server.py
src/MikMarbleMod/: CMakeLists.txt  dllmain.cpp
tests/: bot_test.py  requirements.txt
